force-app/main/default/objects/Kybella__c/Kybella__c.object-meta.xml
<CustomObject>
    <label>Kybella</label>
    <nameField>
        <label>Kybella  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kybellas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>