force-app/main/default/objects/Kybella__c/fields/Chart__c.field-meta.xml
<CustomField>
    <fullName>Chart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart</label>
    <referenceTo>Chart__c</referenceTo>
    <relationshipLabel>Kybellas</relationshipLabel>
    <relationshipName>Kybellas</relationshipName>
    <type>Lookup</type>
</CustomField>