force-app/main/default/objects/Kybella__c/fields/Expiration_number__c.field-meta.xml
<CustomField>
    <fullName>Expiration_number__c</fullName>
    <label>Expiration number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>