force-app/main/default/objects/Kybella__c/fields/Lot_number__c.field-meta.xml
<CustomField>
    <fullName>Lot_number__c</fullName>
    <label>Lot number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>