force-app/main/default/objects/Kybella__c/fields/Number_Of_Injections__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Injections__c</fullName>
    <label>Number Of Injections</label>
    <length>255</length>
    <type>Text</type>
</CustomField>